--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -939,6 +939,7 @@
             <label>Add log</label>
             <select style="width:7em">
               <option value="1" selected>normal</option>
+              <option value="2">high</option>
               <option value="0">debug</option>
             </select>
             <input type="text">
