Fix: IE7 egress region list width

--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -481,7 +481,8 @@
                         </label>
                         <div class="dropdown clearfix">
                           <!-- Giving this the `control-group` class is a bit of a hack to get its error state working right. -->
-                          <ul id="EgressRegion" class="control-group dropdown-menu f32" role="menu" style="display: block; position: static; margin-bottom: 5px; *width: 180px;">
+                          <ul id="EgressRegion" class="control-group dropdown-menu f32" role="menu"
+                              style="display: block; position: static; margin-bottom: 5px; *min-width: 180px;">
                             <li data-region="BEST">
                                 <a tabindex="-1" href="#" class="flag unknown">
                                   <strong data-i18n="settings#egress-region#select-best-performance">
